# currency-svc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  compose.yml
.github/workflow/: main.yml
.github/workflows/: main.yml
config/: dev.env
proto/: currency.proto
src/: main.rs
