[package]
name = "currency_svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10"
prost = "0.12"
serde_json = "1.0"
serde = { version = "1.0.196", features = ["derive"] }
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"]}
dotenvy = "0.15.7"

[build-dependencies]
tonic-build = "0.8"

# [target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
# version = "0.3"