[package]
name = "currency_svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.13.1"
prost = "0.13.5"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "sync", "time"]}
dotenvy = "0.15.7"
tonic-health = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"

# [target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
# version = "0.3"